--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@tailwindcss/vite": "^4.1.12",
+    "d3-geo": "^3.1.1",
     "firebase": "^12.2.1",
     "lucide-react": "^0.542.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-is": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "react-simple-maps": "^3.0.0",
     "recharts": "^3.1.2",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
